# discord-gateway

./: README.md  pyproject.toml  setup.py
discord_gateway/: __init__.py  _conn.py  _errors.py  _opcode.py  conn.py  errors.py  opcode.py
tests/: test_conn.py  test_gateway.py
