[project]
name = "discord-gateway"
version = "0.0.1"
description = "Sans-I/O implementation of the Discord gateway"
readme = "README.md"
requires-python = ">=3.6.2"
license = {file = "LICENSE"}
authors = [{name = "Bluenix", email = "bluenixdev@gmail.com"}]

keywords = [
    "discord", "discord-api", "discord-bot", "discord-api-wrapper",
    "discord-gateway", "python-3"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/Bluenix2/discord-gateway/"
repository = "https://github.com/Bluenix2/discord-gateway/"

[build-system]
requires = ["flit_core >=3.5<4"]
build-backend = "flit_core.buildapi"
